set up basic website

--- a/index.html
+++ b/index.html
@@ -1,39 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+  <title>Document</title>
 </head>
+
 <body>
-    <div class="top">
-        <header>
-            <img src="img/cat.png">
-            <div class="right-links">
-                <ul>
-                    <li>link 1</li>
-                    <li>link 2</li>
-                    <li>link 3</li>
-                </ul>
-            </div>
-        </header>
-        <div class="main-content">
-            <div class="descriptor">
-                <h1>Main heading</h1>
-                <p>Description box. Interesting content listed here.</p>
-                <button>Sign up</button>
-            </div>
-            <img src="img/tea.jpeg">
-        </div>
+  <div class="top">
+    <header>
+      <div class="left-header">
+        <img src="img/cat.png">
+        <h1>Gato's Cafe</h1>
+      </div>
+      <div class="right-links">
+        <ul>
+          <li>link 1</li>
+          <li>link 2</li>
+          <li>link 3</li>
+        </ul>
+      </div>
+    </header>
+    <div class="main-content">
+      <div class="descriptor">
+        <h1>Welcome to Gato's Cafe.</h1>
+        <p class="subtext">Description box. Interesting content listed here. There is a lot of text here describing this
+          landing page.</p>
+        <button>Learn More</button>
+      </div>
+      <img src="img/tea.jpeg">
     </div>
-
-    <footer>
-
-    </footer>
+  </div>
+  <div class="info-section">
+    <h2>Menu</h2>
+    <div class="items">
+      <div class="subsection">
+        <img src="img/latte.jpg">
+        <p>Enjoy our signature latte! Add your choice of flavor shot for a great taste.</p>
+      </div>
+      <div class="subsection">
+        <img src="img/milk_tea.jpg" alt="Black tea with milk">
+        <p>Black tea is a fan favorite. A great option for a warm relaxing drink.</p>
+      </div>
+      <div class="subsection">
+        <img src="img/coffee.jpg" alt="Black coffee">
+        <p>Black coffee is a staple option. Get your day started with a cup!</p>
+      </div>
+      <div class="subsection">
+        <img src="img/pastries.jpg" alt="Assorted pastries">
+        <p>A bit hungry? Want a tasty snack? Enjoy our varied pastries baked fresh each morning.</p>
+      </div>
+    </div>
+  </div>
+  <div class="testimonial">
+    <div class="text">
+      <p id="qoute">Meow. This is some high quality milk!</p>
+      <p id="remark">-Gato, Cafe Owner, Cat</p>
+    </div>
+  </div>
+  <div class="action">
+    <div class="blue-section">
+      <div class="left-text">
+        <h2>Come visit today!</h2>
+        <p>You can find the location and hours by clicking the more info button!</p>
+      </div>
+        <button>More Info</button>
+    </div>
+  </div>
+  <footer>
+    <p>Produced by Jobin</p>
+    <p>Thanks for visiting!</p>
+    <a href="https://github.com/jobin-b">https://github.com/jobin-b</a>
+  </footer>
 </body>
+
 </html>
